# Web2BigTable

./: README.md  example_task.json  install.sh  main.py  multiagent-workflow.md  pyproject.toml  tui_app.py
Memento-S/: .env.example  .gitignore  README.md  install_mac.sh  install_windows.bat  install_windows.ps1  launch  pyproject.toml  requirements.txt  tui.py
Memento-S/builtin/skills/image-analysis/: SKILL.md
Memento-S/builtin/skills/image-analysis/scripts/: analyze_image.py
Memento-S/builtin/skills/skill-creator/eval-viewer/: generate_review.py
Memento-S/builtin/skills/uv-pip-install/: SKILL.md
Memento-S/builtin/skills/web-search/: SKILL.md
Memento-S/builtin/skills/web-search/scripts/: fetch.py  search.py
Memento-S/cli/: config.py  main.py
Memento-S/core/: __init__.py  utils.py
Memento-S/core/agent/: __init__.py  memento_s_agent.py  session_manager.py  stateful_context_manager.py  utils.py
Memento-S/core/agent/prompts/: __init__.py  templates.py
Memento-S/core/config/: __init__.py  config.py  logging.py
Memento-S/core/llm/: __init__.py  client.py  schema.py
Memento-S/core/skills/: __init__.py  base.py  metadata.py  schema.py  skill_manager.py
Memento-S/core/skills/provider/: __init__.py  delta_skill_provider.py  protocol.py
Memento-S/core/skills/provider/delta_skills/: __init__.py  bootstrap.py  observability.py  resolver.py
Memento-S/core/skills/provider/delta_skills/execution/: __init__.py  executor.py  verifier.py
Memento-S/core/skills/provider/delta_skills/execution/analyzer/: __init__.py  dependencies.py  parameters.py  parsing.py
Memento-S/core/skills/provider/delta_skills/execution/sandbox/: __init__.py  artifacts.py  base.py  e2b.py  local.py
Memento-S/core/skills/provider/delta_skills/execution/tracks/: __init__.py  base.py  code_track.py  knowledge.py  playbook.py  prompts.py  utils.py
Memento-S/core/skills/provider/delta_skills/importers/: __init__.py  adapter.py  openskills_importer.py  utils.py
Memento-S/core/skills/provider/delta_skills/retrieval/: __init__.py  bm25.py  cloud_catalog.py  hybrid.py  profile.py  qwen3_embedding.py  reranker.py  stopwords.py
Memento-S/core/skills/provider/delta_skills/schema/: __init__.py  exceptions.py  schema.py
Memento-S/core/skills/provider/delta_skills/skills/: __init__.py  semantic_tags.yaml
Memento-S/core/skills/provider/delta_skills/skills/auditor/: __init__.py  auditor.py  compliance.py  migrator.py  models.py  security.py
Memento-S/core/skills/provider/delta_skills/skills/creator/: __init__.py  creator.py  extraction.py  prompts.py
Memento-S/core/skills/provider/delta_skills/skills/store/: __init__.py  embedding.py  library.py  persistence.py
Memento-S/core/tools/: __init__.py  builtins.py
Memento-S/tui/: __init__.py  app.py  command_line.py  config.py  conversation_store.py  interaction_logger.py  llm_client.py  skill_runner.py
Memento-S/tui/styles/: main.tcss
Memento-S/tui/widgets/: __init__.py  conversation_list.py  dialogs.py
docs/plans/: 2026-03-05-multi-decompose-skills-design.md  2026-03-05-multi-decompose-skills-plan.md
eval/: learn.sh  reflect.py  run.py  utils.py  verify.py  widesearch.jsonl
eval/gold/: ws_en_001.csv  ws_en_002.csv  ws_en_003.csv  ws_en_004.csv  ws_en_005.csv  ws_en_006.csv  ws_en_007.csv  ws_en_008.csv  ws_en_009.csv  ws_en_010.csv  ws_en_011.csv  ws_en_012.csv  ws_en_013.csv  ws_en_014.csv  ws_en_015.csv  (+26 more)
figures/: gen_charts.py  gen_flow_diagrams.py
logs/: view_trajectory.py
orchestrator/: mcp_server.py  orchestrator_agent.py
(+10 files in other folders)
